--- a/src/main/resources/ru/javabegin/javafx/addressbook/locales/Locale_en.properties
+++ b/src/main/resources/ru/javabegin/javafx/addressbook/locales/Locale_en.properties
@@ -8,3 +8,6 @@ edit=Edit
 delete=Delete
 cancel=Cancel
 editing=Editing of records
+error=Error
+select_person=Please, select a person
+fill_field=Please, fill field
