added option to switch language on application

--- a/src/main/resources/ru/javabegin/javafx/addressbook/locales/Locale_en.properties
+++ b/src/main/resources/ru/javabegin/javafx/addressbook/locales/Locale_en.properties
@@ -11,3 +11,5 @@ editing=Editing of records
 error=Error
 select_person=Please, select a person
 fill_field=Please, fill field
+en=English
+ru=Russian
