--- a/src/main/resources/ru/javabegin/javafx/addressbook/locales/Locale_en.properties
+++ b/src/main/resources/ru/javabegin/javafx/addressbook/locales/Locale_en.properties
@@ -13,3 +13,5 @@ select_person=Please, select a person
 fill_field=Please, fill field
 en=English
 ru=Russian
+confirm=Please, confirm action
+confirm_delete=Confirm deleting
